--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=vuelos2024
 server.port=8080
 spring.datasource.url=jdbc:mysql://localhost:3306/vuelos2024
 spring.datasource.username=root
-spring.datasource.password=rootpassword
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
